# medical-cost-prediction

./: .env.example  .gitignore  .jupyter_ystore.db-journal  AGENTS.md  LICENSE  README.md  dvc.yaml  pyproject.toml  pytest.ini  requirements-test.txt  requirements-train.txt  requirements.txt  run_jupyter_lab.sh  run_mlflow_ui.sh
app/data/: cost_benchmarks.json  medical_inflation.json  prediction_metadata.json
assets/: header_prompt.txt
data/: h251.sas7bdat.dvc
docs/: candidate_features.md  data_dictionary.md  git_conventions.md  prd_final.md  product_requirements.md  project_structure.md  technical_specifications.md  us_healthcare_costs_guide.md  virtual_environments.md
docs/references/: data_dictionary.md
docs/research/: candidate_features.md  ml_with_meps.md  regulatory_compliance.md  us_healthcare_costs_guide.md
docs/specs/: product_requirements.md  technical_specifications.md
docs/workflow/: git_conventions.md
notebooks/: 1_eda_and_preprocessing.ipynb  1_eda_and_preprocessing.py  2_modeling.ipynb  2_modeling.py  medical_cost_prediction.ipynb  medical_cost_prediction.py
notebooks/models/: tuning_metrics_rf.json
scripts/: benchmark_llm.py  build_app_artifacts.py  llm_baseline.py  preprocess.py  train_baseline.py  train_xgboost_quantile.py  tune_elastic_net.py  tune_random_forest.py  tune_xgboost.py  update_medical_inflation.py
src/: constants.py  data.py  display.py  modeling.py  params.py  pipeline.py  stats.py  transformers.py  utils.py
tests/unit/: test_update_medical_inflation.py
