[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical_cost_prediction"
version = "0.1.0"
description = "Prediction of annual out-of-pocket healthcare costs using MEPS data"
authors = [
    { name = "Jens Bender" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.12.0",
    "xgboost>=1.5.0",
    "joblib>=1.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
