[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical_cost_prediction"
version = "0.1.0"
description = "Prediction of annual out-of-pocket healthcare costs using MEPS data"
authors = [
    { name = "Jens Bender" }
]
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies (Required for both training and the app)
dependencies = [
    "joblib==1.5.2",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
]

[project.optional-dependencies]
# Dependencies for model training, notebooks, and EDA
train = [
    "jupyterlab==4.5.0",
    "jupytext==1.18.1",
    "jupyter-collaboration==4.2.0",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "xgboost==3.1.2",
]

# Dependencies for the Web App/API and deployment
app = [
    "fastapi==0.123.0",
    "pydantic==2.12.4",
    "uvicorn==0.38.0",
    "gradio==6.0.1",
    "requests==2.32.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
